--- a/about.html
+++ b/about.html
@@ -30,10 +30,10 @@
         At school over this past semester, I was a Software Developer for Cornell AguaClara project team working on a data collection application as well as a Software engineer for a startup called Takk working on a platform which aim to make school alumni fundraising easier and more efficent.
         <br>
         <br>
-        On the side, I am currently building a mobile application in React Native, LookUp, that allows students to ask questions about various subjects and classes and recieve help from people around them who have proficeient knowledge in thes esubjects or have taken the class already. I am also in the process of learning Angular!
+        On the side, I am currently building a mobile application in React Native, LookUp, that allows students to ask questions about various subjects and classes and recieve help from people around them who have proficeient knowledge in these subjects or have taken the class already. I am also in the process of learning Angular!
         <br>
         <br>
-        I love learning new technolgies, languages and frameworks and alway looking to dive into new projects! If you are working on an interesting project, I would love to chat!. Feel free to email me at  <a class="linkintro" href="mailto:ec592@cornell.edu">alc298@cornell.edu</a>
+        I love learning new technolgies, languages and frameworks and alway looking to dive into new projects! If you are working on an interesting project, I would love to chat! Feel free to email me at  <a class="linkintro" href="mailto:alc298@cornell.edu">alc298@cornell.edu</a>
         </p>
         </div>
 
